kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: team-pegasus-web
    app.kubernetes.io/instance: team-pegasus
    app.kubernetes.io/name: team-pegasus
  name: team-pegasus-web
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/instance: team-pegasus
    app.kubernetes.io/name: team-pegasus
  sessionAffinity: None
  type: ClusterIP
