kubernetes/web-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Validate=false
    openshift.io/host.generated: "true"
  name: team-pegasus-web
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: team-pegasus
    weight: 100
  wildcardPolicy: None
